Update for Contao 4.9

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,16 @@
 	"autoload":{
 		"psr-4": {
 			"Rsm\\RsmGooglerecaptchaModul\\": "src/"
-		}
+		},
+		"classmap": [
+		    "src/Resources/contao/"
+		],
+		"exclude-from-classmap": [
+		    "src/Resources/contao/config/",
+		    "src/Resources/contao/dca/",
+		    "src/Resources/contao/languages/",
+		    "src/Resources/contao/templates/"
+		]
 	},
 	"extra": {
 		"contao-manager-plugin": "Rsm\\RsmGooglerecaptchaModul\\ContaoManager\\Plugin"
